# bard-box

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: mappings.json
src/: app.py
static/css/: style.css
templates/: index.html
